# diaryproject

./: .gitignore  README.md
.github/workflows/: test.yml
backend/: dockerfile  main.py  pyproject.toml
backend/src/: agent.py  db.py  models.py  settings.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/pages/: DetailPage.jsx  InputPage.jsx  TimelinePage.jsx
